--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,11 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="embed-responsive embed-responsive-16by9"></div>
+          <div id="peerDiv" class="embed-responsive embed-responsive-16by9"></div>
         </div>
       </div>
     </div>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
